changed tec-9 spam bind

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -114,7 +114,8 @@ clutchoff
 alias "clutchsoundon" "volume 1; snd_deathcamera_volume 0; snd_mapobjective_volume 0; snd_musicvolume 0.3; snd_roundend_volume 0; snd_roundstart_volume 0; snd_tensecondwarning_volume 1"
 alias "clutchsoundoff" "volume 0.5; snd_deathcamera_volume 1; snd_mapobjective_volume 1; snd_musicvolume 0.7; snd_roundend_volume 1; snd_roundstart_volume 1; snd_tensecondwarning_volume 1"
 
-
+alias "+tecspam" "unbind mwheelup; unbind mwheeldown; bind mwheelup -attack; bind mwheeldown +attack"
+alias "-tecspam" "unbind mwheelup; unbind mwheeldown; bind mwheelup +jump; bind mwheeldown +jump"
 
 
 //Keybinds
@@ -135,7 +136,8 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "c" "drop"
 bind "g" "slot1"
-bind "h" "bot_place"
+bind "j" "bot_place"
+bind "h" "toggle tecspam"
 bind "f" "use weapon_knife"
 bind "i" "show_loadout_toggle"
 bind "m" "teammenu"
