--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -68,14 +68,14 @@ closeonbuy "0"
 hud_takesshots "0"
 
 
-//HUD
+// HUD
 hud_scaling "0.8"
 hud_showtargetid "1"
 cl_draw_only_deathnotices "0"
 cl_righthand "1"
 cl_showloadout "1"
 cl_showpos "1"
-cl_showfps "1"
+cl_showfps "0"
 net_graph "0"
 net_graphpos "2"
 net_graphproportionalfont "1"
@@ -91,6 +91,13 @@ cl_bob_lower_amt "5"
 cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
+// Radar
+cl_radar_always_centered “0”
+cl_radar_scale “0.3”
+cl_hud_radar_scale “1.15”
+cl_radar_icon_scale_min “1”
+cl_radar_rotate “1”
+cl_radar_square_with_scoreboard “1”
 
 // Aliases
 alias "showmouse" // for mouse on scoreboard
