--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -144,7 +144,7 @@ bind "e" "+use"
 bind "c" "drop"
 bind "g" "slot1"
 bind "j" "bot_place"
-bind "h" "toggle tecspam"
+bind "h" "tecspam"
 bind "f" "use weapon_knife"
 bind "i" "show_loadout_toggle"
 bind "m" "teammenu"
