--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -19,7 +19,13 @@ snd_headphone_pan_radial_weight "2"
 snd_legacy_surround "0"
 snd_mute_losefocus "1"
 lobby_voice_chat_enabled "0"
-
+snd_musicvolume 0.15
+snd_menumusic_volume 0
+snd_roundstart_volume 0
+snd_roundend_volume 0.5
+snd_mapobjective_volume 0.75
+snd_tensecondwarning_volume 1
+snd_deathcamera_volume 0
 
 //Video
 mat_monitorgamma "2.1"
