--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -171,7 +171,7 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 bind "ALT" "+duck"
 bind "RALT" "clutch"
-bind "SPACE" "+voicerecord"
+bind "SPACE" "+jump"
 bind "TAB" "+ng"
 bind "ESCAPE" "cancelselect"
 bind "DEL" "exec autoexec"
